--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.karumi:dexter:4.1.0'
 }
