--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.karumi:dexter:4.1.0'
+
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
 }
